k8s/deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: transacciones-api
  namespace: transacciones-api
  labels:
    app: transacciones-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transacciones-api
  template:
    metadata:
      labels:
        app: transacciones-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: transacciones-api
                topologyKey: kubernetes.io/hostname
      containers:
        - name: transacciones-api
          image: 388839923332.dkr.ecr.us-east-1.amazonaws.com/transacciones-api:v1
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 15
            failureThreshold: 3
      terminationGracePeriodSeconds: 30
