k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: transacciones-api
  namespace: transacciones-api
spec:
  selector:
    app: transacciones-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
