k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transacciones-api
  namespace: transacciones-api
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck
spec:
  rules:
    - host: transacciones-api.tu-dominio.com   # ajusta o quita el host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transacciones-api
                port:
                  number: 80
